# agentic-testing

./: .gitignore  .pyre_configuration  CHANGELOG.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  PRD.md  README.md  SKILL.md  TEST.md  install.ps1  install.sh  mcp.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/agent/: container.py  dependency_injection_container.py  dependency_wiring_container.py  logging_manager.py  wiring.py
src/bootstrap/: container.py
src/bootstrap/prod/: wiring.py
src/capabilities/: autogenerate_actions.py  autogenerate_init.py  autonomous_testing_actions.py  autonomous_testing_healer.py  autonomous_testing_healing_adapter.py  autonomous_testing_init.py  code_analysis_actions.py  code_analysis_audit_analyzer.py  code_analysis_auditor.py  code_analysis_init.py  governance_adapter.py  healing_strategies.py  synthetic_data_actions.py  test_healing_actions.py
src/contract/: __init__.py  analysis_report_response.py  analyze_code_request.py  audit_coverage_request.py  audit_report_response.py  code_analyzer_protocol.py  file_system_port.py  generate_report_response.py  generate_test_request.py  protocol.py  quality_auditor_protocol.py  request.py  run_test_request.py  test_generator_protocol.py  test_healer_protocol.py  test_result_response.py  test_runner_protocol.py
src/core/_taxonomy/: errors.py  models.py
src/core/capabilities/autogenerate/: __init__.py  actions.py
src/core/capabilities/autonomous_testing/: actions.py  healer.py
src/core/capabilities/code_analysis/: actions.py  auditor.py
src/infrastructure/: desktop_commander_delegation.py  desktop_commander_delegation_client.py  desktop_commander_mcp.py  desktop_commander_mcp_client.py  file_system.py  file_system_provider.py  secure_command.py  secure_command_adapter.py  shell_adapter.py  unix_socket_client.py
src/surfaces/: cli_main.py  cli_main_entry.py  mcp_server.py  mcp_server_entry.py  mcp_tools.py  mcp_tools_registry.py
src/surfaces/cli/: main.py
src/surfaces/mcp/: server.py  tools.py
src/taxonomy/: __init__.py  agentic_error.py  lint_domain_vo.py  lint_identifier_vo.py  lint_value_vo.py  test_event.py  test_interface_vo.py  test_result_entity.py
tests/: autonomous_testing_e2e_test_server_e2e.py  autonomous_testing_unit_test_healer_unit.py  code_analysis_unit_test_autogenerate_actions.py  conftest.py  core_unit_test_abstract_models.py  core_unit_test_taxonomy.py  server_unit_test_container.py  test_analyzer.py  test_autonomous_testing_e2e_server.py  test_cli_main.py  test_failing_sample.py  test_gguf_parser.py  test_main.py  test_secure_command_execution.py  test_taxonomy.py
tests/agent/: test_container.py  test_logging_manager.py  test_main.py  test_server.py  test_tools.py  test_wiring_container.py
tests/autonomous_testing/e2e/: test_server_e2e.py
tests/autonomous_testing/integration/: test_healer.py
tests/autonomous_testing/unit/: test_actions.py  test_healer_unit.py
tests/capabilities/: autonomous_testing_integration_test_healer.py  test_actions.py  test_analyzer.py  test_auditor.py  test_autogenerate.py  test_autonomous_testing_e2e_server.py  test_autonomous_testing_integration_healer.py  test_generator.py  test_governance_adapter.py  test_healer.py  test_healing_strategies.py
tests/cli/: test_migrate_slow_mock.py
tests/code_analysis/unit/: test_analyzer.py  test_auditor.py  test_autogenerate_actions.py
tests/core/unit/: test_abstract_models.py  test_taxonomy.py
tests/infrastructure/: test_delegation_clients.py  test_file_system.py  test_secure_command.py  test_secure_command_execution.py  test_shell_adapter.py  test_unix_socket_client.py
tests/infrastructure/unit/: test_file_system.py  test_shell_adapter.py
tests/server/unit/: test_container.py  test_main.py  test_server.py  test_tools.py
tests/surfaces/: cli_test_migrate_slow_mock.py  test_cli_main.py  test_cli_migrate_slow_mock.py  test_mcp_registry_helpers.py  test_mcp_tools.py
tests/synthetic_data/unit/: test_generator.py
tests/taxonomy/: test_abstract_models.py  test_interfaces.py  test_lint_domain_vos.py  test_lint_identifier_vos.py  test_lint_value_vos.py  test_taxonomy.py  test_taxonomy_extended.py  test_test_result_entity.py
(+1 files in other folders)
