[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-testing"
version = "1.0.0"
description = "MCP server for autonomous unit testing and self-healing"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Raka Arwaky", email = "arwaky90@gmail.com"}
]
keywords = ["mcp", "testing", "self-healing", "pytest", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp[cli]",
    "fastmcp",
    "pytest",
    "pytest-asyncio",
    "pydantic",
    "click",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/rakaarwaky/agentic-testing"
Issues = "https://github.com/rakaarwaky/agentic-testing/issues"

[project.scripts]
agentic-testing = "src.surfaces.mcp.server:main"
agentic-test = "src.surfaces.cli.main:cli"

[tool.pyre]
source_directories = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_classes = "Test* !TestResult"
python_files = ["test_*.py", "*_test_*.py", "*_test.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyre-check>=0.9.25",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]
