[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-testing-mcp"
version = "1.1.7"
description = "MCP server for autonomous unit testing and self-healing"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Raka Arwaky", email = "arwaky90@gmail.com"}
]
keywords = ["mcp", "testing", "self-healing", "pytest", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp[cli]",
    "fastmcp",
    "pytest",
    "pytest-asyncio",
    "pydantic",
    "click",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/rakaarwaky/agentic-testing"
Issues = "https://github.com/rakaarwaky/agentic-testing/issues"

[project.scripts]
agentic-testing = "src.surfaces.mcp_server_entry:main"
agentic-test = "src.surfaces.cli_main_entry:cli"

[tool.pyre]
source_directories = ["src"]

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_return_any = false
disallow_untyped_decorators = false
disallow_subclassing_any = false
python_version = "3.12"
exclude = ["tests/", ".venv/", "__pycache__/", "build/", "dist/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_classes = "Test* !TestResult !TestName"
python_files = ["test_*.py", "*_test_*.py", "*_test.py"]
filterwarnings = [
    "ignore::RuntimeWarning:unittest.mock",
    "ignore::ResourceWarning:asyncio",
    "ignore:coroutine.*never awaited:RuntimeWarning",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyre-check>=0.9.25",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]
